--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1188,10 +1188,9 @@ ul {
 }
 
 .catalog__item {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 30%;
-          flex: 1 1 30%;
-  margin-left: 10px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 32%;
+          flex: 0 1 32%;
   margin-bottom: 40px;
 }
 
@@ -1263,10 +1262,14 @@ ul {
           flex-direction: column;
 }
 
-.new__pic {
+.new__wrapper-pic {
   width: 364px;
   height: 268px;
-  display: block;
+}
+
+.new__pic {
+  width: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
