--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,7 @@
 @import '_misc/adjusment';
 @import 'page/slick-theme';
 @import 'page/slick';
+@import 'page/mobile-menu';
 
 // Подлючение основых стилей
 
