--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -713,6 +713,185 @@ ul {
   display: none;
 }
 
+.menu-nav {
+  --duration: .5s;
+  --easing: ease-in-out;
+  position: relative;
+  width: 220px;
+  margin: 20px;
+}
+
+.menu-nav ol {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.menu-nav li {
+  margin: -4px 0 0 0;
+}
+
+.menu-nav a {
+  display: block;
+  text-decoration: none;
+  background: #fff;
+  -webkit-transform-origin: 0 0;
+      -ms-transform-origin: 0 0;
+          transform-origin: 0 0;
+  -webkit-transition: color var(--duration) var(--easing), -webkit-transform var(--duration) var(--easing);
+  transition: color var(--duration) var(--easing), -webkit-transform var(--duration) var(--easing);
+  -o-transition: transform var(--duration) var(--easing), color var(--duration) var(--easing);
+  transition: transform var(--duration) var(--easing), color var(--duration) var(--easing);
+  transition: transform var(--duration) var(--easing), color var(--duration) var(--easing), -webkit-transform var(--duration) var(--easing);
+  -webkit-transition-delay: var(--delay-out);
+       -o-transition-delay: var(--delay-out);
+          transition-delay: var(--delay-out);
+  border-radius: 4px;
+  padding: 1em 1.52em;
+}
+
+.menu-nav a:hover {
+  background: #efefef;
+}
+
+.menu-nav .sub-menu a {
+  font-size: .9em;
+  color: #666666;
+  border-left: 2em solid white;
+  padding: .75em;
+  background: -webkit-linear-gradient(left, #dddddd 2px, #ffffff 2px);
+  background: -o-linear-gradient(left, #dddddd 2px, #ffffff 2px);
+  background: linear-gradient(to right, #dddddd 2px, #ffffff 2px);
+}
+
+.menu-nav .sub-menu a:hover {
+  background: -webkit-linear-gradient(left, #dddddd 2px, #efefef 2px);
+  background: -o-linear-gradient(left, #dddddd 2px, #efefef 2px);
+  background: linear-gradient(to right, #dddddd 2px, #efefef 2px);
+}
+
+.menu-nav header {
+  font-weight: 600;
+  display: block;
+  background: rgba(255, 255, 255, 0.5);
+  -webkit-transform-origin: 0 0;
+      -ms-transform-origin: 0 0;
+          transform-origin: 0 0;
+  -webkit-transition: color var(--duration) var(--easing), -webkit-transform var(--duration) var(--easing);
+  transition: color var(--duration) var(--easing), -webkit-transform var(--duration) var(--easing);
+  -o-transition: transform var(--duration) var(--easing), color var(--duration) var(--easing);
+  transition: transform var(--duration) var(--easing), color var(--duration) var(--easing);
+  transition: transform var(--duration) var(--easing), color var(--duration) var(--easing), -webkit-transform var(--duration) var(--easing);
+  -webkit-transition-delay: var(--delay-out);
+       -o-transition-delay: var(--delay-out);
+          transition-delay: var(--delay-out);
+  border-radius: 4px;
+  padding: 1em 1.52em;
+}
+
+.menu-nav header span {
+  border: none;
+  background: transparent;
+  font-size: 1.5em;
+  padding: 0;
+  cursor: pointer;
+  line-height: 1;
+  float: right;
+}
+
+.menu-nav footer button {
+  position: absolute;
+  top: 0;
+  left: 0;
+  border: none;
+  padding: calc(1em - 2px);
+  width: 100%;
+  -webkit-transform-origin: 0 0;
+      -ms-transform-origin: 0 0;
+          transform-origin: 0 0;
+  -webkit-transition: -webkit-transform var(--duration) var(--easing);
+  transition: -webkit-transform var(--duration) var(--easing);
+  -o-transition: transform var(--duration) var(--easing);
+  transition: transform var(--duration) var(--easing);
+  transition: transform var(--duration) var(--easing), -webkit-transform var(--duration) var(--easing);
+  -webkit-transition-delay: calc(var(--duration) + (.1s * (var(--count) / 2)));
+       -o-transition-delay: calc(var(--duration) + (.1s * (var(--count) / 2)));
+          transition-delay: calc(var(--duration) + (.1s * (var(--count) / 2)));
+  cursor: pointer;
+  outline: none;
+  background: #cdcdcd;
+  opacity: 0;
+}
+
+.menu-nav.closed a,
+.menu-nav.closed header {
+  -webkit-transform: translateY(calc(var(--top) * -1)) scaleY(0.1) scaleX(0.2);
+      -ms-transform: translateY(calc(var(--top) * -1)) scaleY(0.1) scaleX(0.2);
+          transform: translateY(calc(var(--top) * -1)) scaleY(0.1) scaleX(0.2);
+  -webkit-transition-delay: var(--delay-in);
+       -o-transition-delay: var(--delay-in);
+          transition-delay: var(--delay-in);
+  color: transparent;
+}
+
+.menu-nav.closed footer button {
+  -webkit-transition-delay: 0s;
+       -o-transition-delay: 0s;
+          transition-delay: 0s;
+  -webkit-transform: scaleY(0.7) scaleX(0.2);
+      -ms-transform: scaleY(0.7) scaleX(0.2);
+          transform: scaleY(0.7) scaleX(0.2);
+}
+
+.social {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  background: #fff;
+  font-family: verdana;
+  padding: 5px;
+  border-radius: 5px;
+  -webkit-animation: new .5s linear infinite;
+          animation: new .5s linear infinite;
+  margin-top: -50px;
+}
+
+.social a {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+}
+
+@-webkit-keyframes new {
+  0% {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+  50% {
+    -webkit-transform: scaleX(0.95);
+            transform: scaleX(0.95);
+  }
+  100% {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+}
+
+@keyframes new {
+  0% {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+  50% {
+    -webkit-transform: scaleX(0.95);
+            transform: scaleX(0.95);
+  }
+  100% {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+}
+
 .top-line {
   padding-top: 10px;
   padding-bottom: 10px;
