--- a/scss/page/_nav.scss
+++ b/scss/page/_nav.scss
@@ -1,6 +1,7 @@
 .nav {
    background-color: #05328d;
    margin-bottom: 37px;
+   // transform: translateX(-100%);
 }
 .nav__list {
 display: flex;
