--- a/scss/page/_mobile-menu.scss
+++ b/scss/page/_mobile-menu.scss
@@ -1,115 +1,27 @@
-.menu-nav {
-   --duration: .5s;
-   --easing: ease-in-out;
-   position: relative;
-   width: 220px;
-   margin: 20px;
- }
- .menu-nav ol {
-   list-style-type: none;
-   margin: 0;
-   padding: 0;
- }
- .menu-nav li {
-   margin: -4px 0 0 0;
- }
- .menu-nav a {
-   display: block;
-   text-decoration: none;
-   background: #fff;
-   transform-origin: 0 0;
-   transition: transform var(--duration) var(--easing), color var(--duration) var(--easing);
-   transition-delay: var(--delay-out);
-   border-radius: 4px;
-   padding: 1em 1.52em;
- }
- .menu-nav a:hover {
-   background: #efefef;
- }
- .menu-nav .sub-menu a {
-   font-size: .9em;
-   color: #666666;
-   border-left: 2em solid white;
-   padding: .75em;
-   background: linear-gradient(to right, #dddddd 2px, #ffffff 2px);
- }
- .menu-nav .sub-menu a:hover {
-   background: linear-gradient(to right, #dddddd 2px, #efefef 2px);
- }
- .menu-nav header {
-   font-weight: 600;
-   display: block;
-   background: rgba(255, 255, 255, 0.5);
-   transform-origin: 0 0;
-   transition: transform var(--duration) var(--easing), color var(--duration) var(--easing);
-   transition-delay: var(--delay-out);
-   border-radius: 4px;
-   padding: 1em 1.52em;
- }
- .menu-nav header span {
+.mobile_line {
+display: none;
+background-color: rgba(#05328D,0.8);
+padding-bottom: 10px;
+padding-top: 10px;
+}
+
+.button__humberger {   
+   background-color: transparent;
    border: none;
-   background: transparent;
-   font-size: 1.5em;
-   padding: 0;
-   cursor: pointer;
-   line-height: 1;
-   float: right;
- }
- .menu-nav footer button {
-   position: absolute;
-   top: 0;
-   left: 0;
-   border: none;
-   padding: calc(1em - 2px);
-   width: 100%;
-   transform-origin: 0 0;
-   transition: transform var(--duration) var(--easing);
-   transition-delay: calc(var(--duration) + (.1s * (var(--count) / 2)));
+   width: 30px;
+   height: 20px;
+   display: none; 
    cursor: pointer;
    outline: none;
-   background: #cdcdcd;
-   opacity: 0;
  }
- .menu-nav.closed a,
- .menu-nav.closed header {
-   transform: translateY(calc(var(--top) * -1)) scaleY(0.1) scaleX(0.2);
-   transition-delay: var(--delay-in);
-   color: transparent;
+ .button__line {
+   display: block;
+   width: 25px;
+   height: 3px;
+   margin: 2px 0;
+   background-color: white;
  }
- .menu-nav.closed footer button {
-   transition-delay: 0s;
-   transform: scaleY(0.7) scaleX(0.2);
- }
-     .social
- {
-   position:fixed;
-   bottom:10px;
-   right:10px;
-   background:#fff;
-   font-family:verdana;
-   padding:5px;
-   border-radius:5px;
-   animation:new .5s linear infinite;
-   margin-top:-50px;
- }
- .social a
- {
-   text-decoration:none;
-   color:black;
-   font-weight:bold;
- }
- @keyframes new
- {
-   0%
-   {
-     transform:scaleX(1);
-   }
-   50%
-   {
-     transform:scaleX(.95);
-   }
-   100%
-   {
-     transform:scaleX(1);
-   }
- }
+
+  
+
+ 
