--- a/scss/page/_media.scss
+++ b/scss/page/_media.scss
@@ -1,250 +1,300 @@
-@media screen and (max-width: 1200px){
-}
-@media screen and (max-width: 992px){
+@media screen and (max-width: 1200px) {}
+
+@media screen and (max-width: 992px) {
 
   .header__bottom {
     padding-top: 20px;
-    padding-bottom: 20px; 
+    padding-bottom: 20px;
   }
 
 
-.logo-block {
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-}
-
-.logo {
-  margin-bottom: 10px;
-}
-.log__pic {
-  width: 143px;
-  height: 94px;
+  .logo-block {
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
   }
+
+  .logo {
+    margin-bottom: 10px;
+  }
+
+  .log__pic {
+    width: 143px;
+    height: 94px;
+  }
+
   .logo-text__title {
     font-size: 18px;
   }
+
   .logo-text__subtitle {
     font-size: 10px;
   }
-.header__bottom-midlle, .header__bottom-rigth {
-  align-self: center;
-}
-.basket-service__text {
-  text-align: center;
+
+  .header__bottom-midlle,
+  .header__bottom-rigth {
+    align-self: center;
+  }
+
+  .basket-service__text {
+    text-align: center;
+  }
+
+  // nav
+
+  .nav__animate {
+    font-size: 17px;
+  }
+
+  // конец стилей медия
 }
 
-// nav
+@media screen and (max-width: 768px) {
+  .logo-block {
+    display: none;
+  }
 
-.nav__animate {
-  font-size: 17px;
-}
+  .header__bottom-midlle {
+    flex-grow: 1;
+  }
 
-// конец стилей медия
-}
-@media screen and (max-width: 768px){
-.logo-block {
-  display: none;
-}
+  .basket-service__text {
+    display: none;
+  }
 
-.header__bottom-midlle {
-flex-grow: 1;
-}
+  .basket-service__pic {
+    margin-left: 0;
+  }
 
-.basket-service__text {
-  display: none;
-}
-.basket-service__pic {
-  margin-left: 0;
-}
+  // nav
 
-// nav
-
-// слайдер
-
-
-
-.sidbar-block {
-  display: none;
-  width:0;
-}
-.main-content {
-  width: 100%;
-}
-.slaider__wrapper {
-  height: 250px;
-}
-
-// новости 
-.new-desc__block {
-  flex-basis: 70%;  
-}
-
-.new__wrapper-pic {
-  flex-basis: 30%;
-}
-
-// конец стилей медия
-}
+  // слайдер
 
 
 
+  .sidbar-block {
+    display: none;
+    width: 0;
+  }
 
-@media screen and (max-width: 576px){
-// мобильное меню
-.button__humberger {
-  display: block;
-}
-.mobile_line {
-  display: block;
+  .main-content {
+    width: 100%;
+  }
+
+  .slaider__wrapper {
+    height: 250px;
+  }
+
+  // новости 
+  .new-desc__block {
+    flex-basis: 70%;
+  }
+
+  .new__wrapper-pic {
+    flex-basis: 30%;
+  }
+
+  // конец стилей медия
 }
 
-.nav {
- 
-  z-index: 999;
-  background-color: rgba(0,0,0,0.8);
-  height: 100%; 
-  width: 100%; 
-  transform: translateX(-100%);
-  position: fixed;
-  top: 0;
 
-  
-}
-.nav__list {
-  flex-direction: column;
-  margin-top: 10%;
-  margin: 0 auto;
-}
-.nav__item  {
-  border:none;
 
-}
-.nav__item:first-child {
-  border-left:none;
-}
-.nav__activ {
 
-  transform: translateX(0%); 
-  transition: 0.2s;
-}
-// кнопка крестик
-.close--nav {
-  z-index: 999;
-  right: 0px;
-  top: 10px;
-}
-.close--nav {
-  position: absolute;
-  right: 5px;
-  top: 8px;
-  width: 32px;
-  height: 32px;
-  opacity: 0.8;
-  cursor: pointer;
-}
-.close--nav:hover {
-  opacity: 1;
-}
-.close--nav:before,
-.close--nav:after {
-  position: absolute;
-  left: 15px;
-  content: ' ';
-  height: 20px;
-  width: 2px;
-  background-color: #fff;
-}
-.close--nav:before {
-  transform: rotate(45deg);
-}
-.close--nav:after {
-  transform: rotate(-45deg);
-}
+@media screen and (max-width: 576px) {
+
+  // мобильное меню
+  .button__humberger {
+    display: block;
+  }
+
+  .mobile_line {
+    display: block;
+  }
+
+  .nav {
+
+    z-index: 999;
+    background-color: rgba(0, 0, 0, 0.8);
+    height: 100%;
+    width: 100%;
+    transform: translateX(-100%);
+    position: fixed;
+    top: 0;
+
+
+  }
+
+  .nav__list {
+    flex-direction: column;
+    margin-top: 10%;
+    margin: 0 auto;
+  }
+
+  .nav__item {
+    border: none;
+
+  }
+
+  .nav__item:first-child {
+    border-left: none;
+  }
+
+  .nav__activ {
+
+    transform: translateX(0%);
+    transition: 0.2s;
+  }
+
+  // кнопка крестик
+  .close--nav {
+    z-index: 999;
+    right: 0px;
+    top: 10px;
+  }
+
+  .close--nav {
+    position: absolute;
+    right: 5px;
+    top: 8px;
+    width: 32px;
+    height: 32px;
+    opacity: 0.8;
+    cursor: pointer;
+  }
+
+  .close--nav:hover {
+    opacity: 1;
+  }
+
+  .close--nav:before,
+  .close--nav:after {
+    position: absolute;
+    left: 15px;
+    content: ' ';
+    height: 20px;
+    width: 2px;
+    background-color: #fff;
+  }
+
+  .close--nav:before {
+    transform: rotate(45deg);
+  }
+
+  .close--nav:after {
+    transform: rotate(-45deg);
+  }
 
   .top-line {
-  display: none;
-}
+    display: none;
+  }
 
-.sidbar-block {
-  display: none;
-  width:0;
-}
-.main-content {
-  width: 100%;
-}
-.slaider__wrapper {
-  height: 250px;
-}
-.catalog__item {
-  max-width: 300px;  
-}
-.slaider__title {
-  font-size: 25px;
-  bottom: 40px;
-  left: 21px;
-}
-// контентая часть 
+  .sidbar-block {
+    display: none;
+    width: 0;
+  }
 
-.title-block {
-  display: flex;
-  justify-content: center;
-}
+  .main-content {
+    width: 100%;
+  }
+
+  .slaider__wrapper {
+    height: 250px;
+  }
+
+  .catalog__item {
+    max-width: 300px;
+  }
+
+  .slaider__title {
+    font-size: 25px;
+    bottom: 40px;
+    left: 21px;
+  }
+
+  // контентая часть 
+
+  .title-block {
+    display: flex;
+    justify-content: center;
+  }
 
 
-.catalog__list {
-  flex-direction: column;
+  .catalog__list {
+    flex-direction: column;
     align-content: center;
-}
-.catalog__item {
-  margin-left: 0;
-}
+    
+  }
 
-.catalog__text {
+  .catalog__item {
+    margin-left: 0;
+  }
 
-  display: flex;
-  justify-content: center;
-}
+  .catalog__text {
 
-// новости 
-.new__wrapper-pic {
-  display: none;
-}
-.new__pic {
-  display: none;
-}
-.new-desc__block {
-  flex-basis: 100%;
-  text-align: justify; 
-}
+    display: flex;
+    justify-content: center;
+  }
+
+  // новости 
+  .new__wrapper-pic {
+    display: none;
+  }
+
+  .new__item {
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.3);
+  }
+
+  .new__pic {
+    display: none;
+  }
+
+  .new-desc__block {
+    flex-basis: 100%;
+    text-align: justify;
+  }
+
   // конец стилей медия
-}  
 
-@media screen and (max-width: 375px){
-//  верхнее меню
-.header__bottom-rigth {
-  display: none;
-}
-.address {
-  flex-direction: column;
-  align-items: center; 
-}
-.adress__phone {
-  margin: 0;
+
+  // подвал сайта 
+
+  .logo {
+    display: none;
+  }
 }
 
-//  слайдер
+@media screen and (max-width: 375px) {
+
+  //  верхнее меню
+  .header__bottom-rigth {
+    display: none;
+  }
+  .header__bottom-midlle {
+    margin-right: 0;
+  }
+  .address {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .adress__phone {
+    margin: 0;
+  }
+
+  //  слайдер
   .slaider__title {
     font-size: 22px;
     bottom: 45px;
     left: 15px;
-}
-.slaider__wrapper {
-  height: 190px;
-}
+  }
 
-.catalog__item {
-  max-width: 230px;
-}
+  .slaider__wrapper {
+    height: 190px;
+  }
+
+  .catalog__item {
+    max-width: 230px;
+  }
+
   // конец стилей медия
-}  
+}
