--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -424,21 +424,28 @@ ul {
   padding: 0 3%;
 }
 
-.wrapper {
-  overflow: hidden;
-  min-height: 100%;
+body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-.wrapper:after {
-  content: "";
-  display: block;
-  height: 293px;
+.wrapper {
+  overflow: hidden;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
 }
 
 .footer {
   background-color: #03215c;
-  height: 293px;
-  margin-top: -293px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
 }
 
 /* Slider */
