--- a/scss/_misc/_adjusment.scss
+++ b/scss/_misc/_adjusment.scss
@@ -43,19 +43,21 @@ ul {
     padding: 0 3%;
 }
 
-// старый способ прибития футера
+// старый способ прибития футера (старых браузерах)
 
-.wrapper {
-    overflow: hidden;
-    // min-width: $conteiner-min-width+20px;
-    min-height: 100%;
-}
+// .wrapper {
+//     overflow: hidden;
+//     // min-width: $conteiner-min-width+20px;
+//     min-height: 100%;
+   
+    
+// }
 
-.wrapper:after{
-    content: "";
-    display: block;
-    height: $footer-heigth;
-}
+// .wrapper:after{
+//     content: "";
+//     display: block;
+//     height: $footer-heigth;
+// }
 
 // .clearfix:after {
 //     content: "";
@@ -64,30 +66,28 @@ ul {
 // }
 
 
-.footer {
-background-color: $footer-color;
-height: $footer-heigth;
-margin-top: -$footer-heigth;
-// min-width: $conteiner-min-width+20px;
-}
+// .footer {
+// background-color: $footer-color;
+// height: $footer-heigth;
+// margin-top: -$footer-heigth;
+// // min-width: $conteiner-min-width+20px;
+// }
 
 
 // ПРИБИТИЕ ФУТЕРА НА ФЛЕКСАХ
-
-// .wrapper {
-//     display: flex;
-//     flex-direction: column;
-//     min-height: 100vh;
-//     overflow: hidden;
-//     min-width: $conteiner-min-width+20px;
-//     position: relative;
-// }
-// .footer {
-//     height: $footer-heigth;
-//     background-color: $footer-color;
-//     margin-top: auto;
-//     min-width: $conteiner-min-width+20px;
-// }
+body {
+    display: flex;
+    flex-direction: column; 
+}
+.wrapper {    
+    overflow: hidden;
+    flex: 1 0 auto;
+}
+.footer {  
+    background-color: $footer-color;
+    flex: 0 0 auto;
+  
+ }
 
 
 
