--- a/scss/page/_footer.scss
+++ b/scss/page/_footer.scss
@@ -1,5 +1,5 @@
 .footer__left,.footer__middle,.footer__middle-double,.footer__right {
-
+   flex: 1 0 auto;
    margin-right: 10px;
 }
 .footer__right:last-child{
