--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1358,10 +1358,7 @@ body {
 }
 
 .slaider-bottom__pic {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  max-width: 100%;
 }
 
 .slaider-bottom__block {
