--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1497,6 +1497,49 @@ body {
   margin-right: 3px;
 }
 
+.breadcrumbs {
+  border-bottom: 1px solid #929292;
+  margin-bottom: 15px;
+}
+
+.breadcrumbs__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.breadcrumbs__item {
+  display: inline-block;
+  vertical-align: middle;
+  margin-bottom: 3px;
+}
+
+.breadcrumbs__item::after {
+  content: "/";
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 12px;
+  color: #6f6a6a;
+}
+
+.breadcrumbs__item:last-child:after {
+  content: "";
+  display: none;
+}
+
+.breadcrumbs__link {
+  font-size: 12px;
+  color: #6f6a6a;
+  cursor: pointer;
+}
+
+.breadcrumbs__link--activ {
+  color: #e3a900;
+}
+
 .slaider {
   margin-bottom: 35px;
 }
