--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1576,11 +1576,33 @@ body {
 }
 
 .main-content__text {
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
 
 .main-content__text p {
   line-height: 1.82;
+}
+
+.main-content__btn {
+  margin-bottom: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.main-btn {
+  background: #05328d;
+  color: white;
+  border: none;
+  outline: none;
+  padding: 15px 30px;
+  font-size: 18px;
+  font-family: 'robotobold', Tohoma, sans-serif;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 .slaider {
