--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1598,11 +1598,51 @@ body {
   color: white;
   border: none;
   outline: none;
-  padding: 15px 30px;
-  font-size: 18px;
+  padding: 12px 24px;
+  font-size: 16px;
   font-family: 'robotobold', Tohoma, sans-serif;
   font-weight: bold;
   cursor: pointer;
+  z-index: 1;
+  position: relative;
+  overflow: hidden;
+  -webkit-transition: color 0.4s ease-in-out;
+  -o-transition: color 0.4s ease-in-out;
+  transition: color 0.4s ease-in-out;
+}
+
+.main-btn::before {
+  content: '';
+  z-index: -1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+  background-color: #e3a900;
+  -webkit-transform-origin: center;
+      -ms-transform-origin: center;
+          transform-origin: center;
+  -webkit-transform: translate(-50%, -50%) scale(0);
+      -ms-transform: translate(-50%, -50%) scale(0);
+          transform: translate(-50%, -50%) scale(0);
+  -webkit-transition: -webkit-transform 0.45s ease-in-out;
+  transition: -webkit-transform 0.45s ease-in-out;
+  -o-transition: transform 0.45s ease-in-out;
+  transition: transform 0.45s ease-in-out;
+  transition: transform 0.45s ease-in-out, -webkit-transform 0.45s ease-in-out;
+}
+
+.main-btn:hover {
+  cursor: pointer;
+  color: #161616;
+}
+
+.main-btn:hover::before {
+  -webkit-transform: translate(-50%, -50%) scale(15);
+      -ms-transform: translate(-50%, -50%) scale(15);
+          transform: translate(-50%, -50%) scale(15);
 }
 
 .slaider {
