создание страницы новости

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -27,7 +27,7 @@
 @import 'page/service';
 @import 'page/service-item';
 @import 'page/service-page-inner';
-
+@import 'page/new-item';
 
 // слайдеры 
 
