--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,7 @@
 @import 'page/slick-theme';
 @import 'page/slick';
 @import 'page/mobile-menu';
+@import 'page/pagination';
 
 // Подлючение основых стилей
 
