выдели отдельный конент в стилях

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,7 @@
 @import 'page/slick';
 @import 'page/mobile-menu';
 @import 'page/pagination';
+@import 'page/main-content__text';
 
 // Подлючение основых стилей
 
