--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,6 +30,7 @@
 @import 'page/service-item';
 @import 'page/service-page-inner';
 @import 'page/new-item';
+@import 'page/o-company';
 
 // слайдеры 
 
