--- a/scss/page/_o-company.scss
+++ b/scss/page/_o-company.scss
@@ -3,11 +3,12 @@
    flex-wrap: wrap;
    margin-top: 20px;
    margin-bottom: 35px;
+   justify-content: space-around;
 }
 .partners-block__pic {
    margin-top: 10px;
    margin-bottom: 5px;
-   
+
 }
 .partners-block__link {
    display: block;
