--- a/scss/main.scss
+++ b/scss/main.scss
@@ -31,6 +31,7 @@
 @import 'page/service-page-inner';
 @import 'page/new-item';
 @import 'page/o-company';
+@import 'page/contact';
 
 // слайдеры 
 
