стилизация обратной связи

--- a/scss/page/_contact.scss
+++ b/scss/page/_contact.scss
@@ -25,3 +25,40 @@
 .map {
    margin-bottom: 70px;
 }
+
+
+// стилазиции формы
+
+.form-feedback {
+   display: flex;
+   margin: 0 -.9em;
+   justify-content: space-between;
+   flex-wrap: wrap;
+}
+
+.form-feedback__field {
+   display: flex;
+   flex-direction: column;  
+   flex: 1;
+   margin: .5em .9em;
+}
+.form-feedback__field:last-child {
+   flex-basis: 100%;
+}
+.form-feedback__label {
+   color:#7f7d7d;
+   margin-bottom: 10px;
+}
+.form-feedback__input {
+   padding: 10px 18px;
+   border-color: #05328d;
+   outline: none;
+}
+.form-feedback__textarea {
+   padding-top: 10px;
+   padding-left: 10px;
+   padding-right: 10px;
+   padding-bottom: 30px;
+   border-color: #05328d;
+   outline: none; 
+}
