--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1801,6 +1801,57 @@ body {
   margin-bottom: 70px;
 }
 
+.form-feedback {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0 -.9em;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.form-feedback__field {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  margin: .5em .9em;
+}
+
+.form-feedback__field:last-child {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+}
+
+.form-feedback__label {
+  color: #7f7d7d;
+  margin-bottom: 10px;
+}
+
+.form-feedback__input {
+  padding: 10px 18px;
+  border-color: #05328d;
+  outline: none;
+}
+
+.form-feedback__textarea {
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 30px;
+  border-color: #05328d;
+  outline: none;
+}
+
 .slaider {
   margin-bottom: 35px;
 }
