--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1788,9 +1788,10 @@ body {
 }
 
 .contacts-block__text {
-  font-size: 16px;
+  font-size: 15px;
   color: #006cb5;
   font-family: 'robotomedium',Tohoma,sans-serif;
+  display: block;
 }
 
 .contacts-block--margin {
