линканул для удобства

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,7 +32,7 @@
 @import 'page/new-item';
 @import 'page/o-company';
 @import 'page/contact';
-
+@import 'page/arenda_nedvijenosti';
 // слайдеры 
 
 @import 'page/_slaider';
