--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1871,6 +1871,14 @@ body {
   color: #2a2929;
 }
 
+.price {
+  position: absolute;
+}
+
+.price--position {
+  position: relative;
+}
+
 .slaider {
   margin-bottom: 35px;
 }
