--- a/scss/page/_arenda_nedvijenosti.scss
+++ b/scss/page/_arenda_nedvijenosti.scss
@@ -10,6 +10,14 @@
 }
 .price {
    position: absolute;
+   left: 10px;
+    
+    bottom: 15px;;
+    background-color: #05328d;
+    color: white;
+    @include roboto (bold);
+    padding: 8px 12px;
+    border-radius: 5px;
 }
 .price--position {
    position: relative;
