--- a/scss/main.scss
+++ b/scss/main.scss
@@ -33,6 +33,7 @@
 @import 'page/o-company';
 @import 'page/contact';
 @import 'page/arenda_nedvijenosti';
+@import 'page/arenda_avto';
 // слайдеры 
 
 @import 'page/_slaider';
