--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,6 +34,7 @@
 @import 'page/contact';
 @import 'page/arenda_nedvijenosti';
 @import 'page/arenda_avto';
+@import 'page/news';
 // слайдеры 
 
 @import 'page/_slaider';
