--- a/scss/page/_main-content__text.scss
+++ b/scss/page/_main-content__text.scss
@@ -7,6 +7,8 @@
 .main-content__text img {
    float: left;
    margin-right: 10px;
+   max-width: 100%;
+   display: block;
 }
 ol,ul {
    list-style-position: inside;
