--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -833,7 +833,11 @@ body {
   display: block;
 }
 
-ol, ul {
+.main-content__text ol {
+  list-style-position: inside;
+}
+
+.main-content__text ul {
   list-style-position: inside;
 }
 
