внутренняя страница аренда недвижимости

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -35,6 +35,7 @@
 @import 'page/arenda_nedvijenosti';
 @import 'page/arenda_avto';
 @import 'page/news';
+@import 'page/arenda_nedvijenosti-inner';
 // слайдеры 
 
 @import 'page/_slaider';
