--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1904,6 +1904,89 @@ body {
   margin-bottom: 15px;
 }
 
+.catalog-block__flexcontainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-bottom: 35px;
+}
+
+.catalog-block__slaider {
+  margin-right: 15px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 46%;
+          flex: 0 1 46%;
+}
+
+.slaider-big {
+  margin-bottom: 15px;
+}
+
+.slaider-big__wrap {
+  width: 405px;
+  height: 270px;
+}
+
+.slaider-big__pic {
+  width: 100%;
+  display: block;
+}
+
+.slaider-small__wrap {
+  width: 153px;
+  height: 90px;
+}
+
+.slaider-small__pic {
+  max-width: 100%;
+  display: block;
+}
+
+.catalog-block__desc-text {
+  margin-bottom: 15px;
+}
+
+.catalog-block__title {
+  font-size: 20px;
+  color: black;
+  font-family: 'robotobold', Tohoma, sans-serif;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+
+.catalog-block__name, .catalog-block__text {
+  font-size: 16px;
+  color: #6f6a6a;
+  font-family: 'robotobold', Tohoma, sans-serif;
+  font-weight: bold;
+}
+
+.catalog-block__name {
+  display: inline-block;
+  width: 145px;
+}
+
+.catalog-block__desc-price {
+  margin-bottom: 25px;
+}
+
+.price-b {
+  font-size: 25px;
+  font-family: 'robotobold', Tohoma, sans-serif;
+  font-weight: bold;
+  color: #05328d;
+  margin-right: 10px;
+}
+
+.price-reuslt {
+  font-size: 30px;
+  font-family: 'robotobold', Tohoma, sans-serif;
+  font-weight: bold;
+  color: #05328d;
+}
+
 .slaider {
   margin-bottom: 35px;
 }
